app/assets/stylesheets/boards.css.scss
// Place all the styles related to the boards controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


@media screen and (max-width: 960px) {
    .board, .fixed-right{
        top: 122px;
    }
    .filters-container, .ltl-nav {
    	top: 84px;
    }

}

@media screen and (min-width: 961px) {
    .board, .fixed-right{
        top: 83px;
    }
    .filters-container, .ltl-nav {
    	top: 44px;
    }
}

@media screen and (max-width: 600px) {
    .board, .fixed-right{
        top: 83px;
    }
    .filters-container, .ltl-nav {
    	top: 44px;
    }
}


.board {
	position: absolute;
	width: auto;
	bottom: 0px;
	left: 205px;
	right: 250px;

	white-space: nowrap;
	overflow-x: auto;
	overflow-y: hidden;

	-moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    user-select: none;
}

.board ul {
	margin-left: 0;
	list-style-type: none;
	margin: 0;

}



.board-small {
	left: 205px;
}

.board-big {
	left: 35px;
}


.filters-container {
	position: absolute;
	width: auto;
	height: 40px;
	left: 50px;
	right: 0px;

	background-color: #f6f6f6;
		-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
	box-shadow: 0 1px 1px rgba(0,0,0,0.2);	
	z-index:0;

}

#filters * {
	display: inline-block;
}






.column {
	height: 100%;
	width: 250px;
	padding: 0px;
	margin: 3px 0px;

	display: inline-block;
	vertical-align: top;	
	overflow-y: hidden;

	background-color: rgba(255,255,255,0.5);
	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
	box-shadow: 0 1px 1px rgba(0,0,0,0.2);	
}

.fixed-right {
	position: absolute;
	right: 0px;
	bottom: 0px;
	height: auto;

}

.column h4 {
	
	cursor: pointer;
}

.sortable {
	height: 83%;
	width: 250px;
	min-height: 100px;
	padding-top: 5px;
	padding-bottom: 10px;
	z-index: 0;
	overflow-y: auto;
}

.task {
	height: 100px;
	padding: 0;
	margin-top: 5px;
	margin-bottom: 5px;
	margin-left: 2px;
	width: 240px;
	float: left;
	display:inline-block;
	position:relative;
	vertical-align: top;
	border-radius: 2px;	

	background-color: rgba(255,255,255,0.5);
	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
	box-shadow: 0 0 5px rgba(0,0,0,0.2);

	cursor: pointer;
}

.locked
{
	border-style: solid;
	border-color: rgba(255, 0, 0, 0.24);
}

.dragging {
  -webkit-transform: rotate(-5deg);
  -moz-transform: rotate(-5deg);
  -ms-transform: rotate(-5deg);
  -o-transform: rotate(-5deg);
  transform: rotate(-5deg);
  z-index: 10;
}

.highlight-task {
	-moz-box-shadow: 0 0 10px rgba(32,107,182,0.8);
	-webkit-box-shadow: 0 0 10px rgba(32,107,182,0.8);
	box-shadow: 0 0 10px rgba(32,107,182,0.8);
}

.task-info {
	height: 10px;
	margin: 0;
	padding: 0;
}

.task-type {
	
	width: auto;
	height: 10px;
	padding-left: 2px;
	padding-right: 2px;

	color: white;
	font-weight: bold;
	font-size: 12px;

}

.task-time {
	
	width: auto;
	height: 10px;
	padding-left: 5px;
	padding-right: 5px;
	background-color: LightSteelBlue;

	color: white;
	font-weight:bold;
	font-size: 12px;

}


.task h5 {
	
	height: 30px;
	padding: 0;
	word-wrap:break-word;

}

.task-users {
	
	height: 40px;
	padding-left: 5px;
	background-color: rgba(176,196,222,0.6); 

}

.task img {

	height: 30px;
	width: 30px;

	margin-top: 5px;
	border-radius: 4px;

}



//ScrollBar

.scroll::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

.scroll::-webkit-scrollbar-track {
   background-color: rgba(0,0,0,0.0);
   cursor: pointer;
}

.scroll::-webkit-scrollbar-thumb {
	background-color: rgba(176,196,222,0.6); 
	cursor: pointer;
}

.scroll::-webkit-scrollbar-thumb:hover {
	background-color: rgba(176,196,222,1); 

}


//Sortable

.ui-state-highlight-board {
	float:left;
	height:100px;
	border-color: rgba(0,0,0,0.3);
	border-style: double;
	vertical-align: top;
	width: 240px;

}

//Lateral Bar

.ltl-nav {

	position: absolute;
	bottom: 0px;
	left: 0px;
	background-color: #f6f6f6;
	-moz-box-shadow: 0 0 2px #888;
	-webkit-box-shadow: 0 0 2px#888;
	box-shadow: 0 0 2px #888;
	padding-top: 20px;
	z-index: 1;
}

.ltl-nav-open{
	width: 200px;
}

.ltl-nav-close{
	width: 55px;
}

.ltl-nav-list{

	padding: 0;
	margin: 0;
	width: 100%;
	list-style-type: none;

}

.ltl-nav-list li{
	padding: 0;
	margin: 0;
	width: 100%;
	height: 40px;
	margin-bottom: 20px;
	cursor: pointer;

}

.ltl-nav-list li:hover{
	background-color: #d8d8d8;
}


.ltl-nav-list li img{
	float:left;
	margin-left: 7px;
	margin-right: 5px;

}

.ltl-nav-list li h4{
	float:center;
	cursor: pointer;
}

.ltl-nav-open .ltl-nav-list li h4{
	visibility: visible;
}

.ltl-nav-close .ltl-nav-list li h4{
	visibility: hidden;
}

